# ChangeLog for games-arcade/thinktanks-demo
# Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/games-arcade/thinktanks-demo/ChangeLog,v 1.4 2006/09/19 18:58:30 wolf31o2 Exp $

  19 Sep 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  thinktanks-demo-1.1.ebuild:
  Adding strip to RESTRICT for bug #137819.

  13 Apr 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  thinktanks-demo-1.1.ebuild:
  Fixed thinktanksdemo/thinktanks-demo thanks to stupid epkgmove.

*thinktanks-demo-1.1 (13 Apr 2006)

  13 Apr 2006; Chris Gianelloni <wolf31o2@gentoo.org> +metadata.xml,
  +thinktanks-demo-1.1.ebuild:
  Moved from games-arcade/thinktanksdemo to games-arcade/thinktanks-demo.

  21 Sep 2005; Chris Gianelloni <wolf31o2@gentoo.org>
  thinktanksdemo-1.1.ebuild:
  Changed check_license to explicitly list license to check.

*thinktanksdemo-1.1 (07 Oct 2003)

  07 Oct 2003; Mike Frysinger <vapier@gentoo.org> :
  Initial import.  Ebuild submitted by me.