@@ -1,6 +1,12 @@
 # ChangeLog for games-arcade/thinktanks-demo
-# Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/games-arcade/thinktanks-demo/ChangeLog,v 1.4 2006/09/19 18:58:30 wolf31o2 Exp $
+# Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/games-arcade/thinktanks-demo/ChangeLog,v 1.5 2008/04/25 21:52:14 tupone Exp $
+
+*thinktanks-demo-1.1-r1 (25 Apr 2008)
+
+  25 Apr 2008; Tupone Alfredo <tupone@gentoo.org>
+  +thinktanks-demo-1.1-r1.ebuild:
+  Removing internal copies of system libraries. Fix bug #217036 by Gordon Malm.
 
   19 Sep 2006; Chris Gianelloni <wolf31o2@gentoo.org>
   thinktanks-demo-1.1.ebuild:
